Minor tweaks to layout of file selector/download buttons. Dialogs have max-width of 100% now (so the About dialog looks alright on narrow screens). Tapping on a link in the content when the mobile menu is prevented (tapping content should just close the menu).

--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -108,10 +108,6 @@ h4 {
 
 /* Form elements */
 
-form.download_zip {
-  display: inline;
-}
-
 input,
 textarea {
   @include border-radius(5px);
@@ -149,6 +145,7 @@ button,
   display: inline-block;
   font-size: 1em;
   font-weight: 600;
+  margin: 0;
   min-width: 100px;
   outline: none;
   padding: 0.5em 2em;
