--- a/app/assets/stylesheets/grader.scss
+++ b/app/assets/stylesheets/grader.scss
@@ -534,6 +534,7 @@ li.annotation_category {
 
 #panes-content {
   height: 100%;
+  margin-top: 2.5em;
   width: 100%;
 
   #panes {
@@ -590,5 +591,24 @@ li.annotation_category {
     @include breakpoint(small) {
       display: none;
     }
+  }
+}
+
+
+/* File selector/download buttons */
+.file_selector,
+.download_file {
+  @include border-radius(5px);
+  background: $light-grey;
+  border: 1px solid #ddd;
+  display: inline-block;
+  padding: 0.5em;
+}
+
+.file_selector {
+  margin-right: 1em;
+
+  @include breakpoint(mobile) {
+    margin-bottom: 1em;
   }
 }
